# sigma-types-macros

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: invalid.rs  ref.rs  valid.rs
src/: lib.rs
