[package]
name = "sigma-types-macros"
version = "0.1.0"
edition = "2024"
publish = true
authors = [ "Will Sturgeon" ]
description = "Macros to enhance the `sigma-types` crate"
readme = "README.md"
homepage = "https://github.com/wrsturgeon/sigma-types-macros"
repository = "https://github.com/wrsturgeon/sigma-types-macros"
license = "MPL-2.0"
keywords = [ "proc-macro" ]
categories = [ "development-tools::procedural-macro-helpers", "development-tools::testing" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.93", default-features = false, features = [  ] }
quote = { version = "1.0.38", default-features = false, features = [ "proc-macro" ] }
syn = { version = "1.0.109", default-features = false, features = [ "clone-impls", "extra-traits", "full", "parsing", "printing", "proc-macro" ] }


[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false, features = [  ] }
quickcheck_macros = { version = "1.0.0", default-features = false, features = [  ] }
sigma-types = { version = "0.3.3", default-features = false, features = [ "quickcheck" ] }

[features]

[lints.rust]
abi-unsupported-vector-types = "deny"
absolute-paths-not-starting-with-crate = "deny"
ambiguous-associated-items = "deny"
ambiguous-glob-imports = "deny"
ambiguous-glob-reexports = "deny"
ambiguous-negative-literals = "deny"
ambiguous-wide-pointer-comparisons = "deny"
anonymous-parameters = "deny"
arithmetic-overflow = "deny"
array-into-iter = "deny"
asm-sub-register = "deny"
async-fn-in-trait = "deny"
bad-asm-style = "deny"
bare-trait-objects = "deny"
binary-asm-labels = "deny"
bindings-with-variant-name = "deny"
boxed-slice-into-iter = "deny"
break-with-label-and-loop = "deny"
cenum-impl-drop-cast = "deny"
clashing-extern-declarations = "deny"
closure-returning-async-block = "deny"
coherence-leak-check = "deny"
conflicting-repr-hints = "deny"
confusable-idents = "deny"
const-evaluatable-unchecked = "deny"
const-item-mutation = "deny"
dangling-pointers-from-temporaries = "deny"
dead-code = "deny"
default-overrides-default-fields = "deny"
dependency-on-unit-never-type-fallback = "deny"
deprecated = "deny"
deprecated-in-future = "deny"
deprecated-safe-2024 = "deny"
deprecated-where-clause-location = "deny"
deref-into-dyn-supertrait = "deny"
deref-nullptr = "deny"
drop-bounds = "deny"
dropping-copy-types = "deny"
dropping-references = "deny"
duplicate-macro-attributes = "deny"
dyn-drop = "deny"
edition-2024-expr-fragment-specifier = "deny"
elided-lifetimes-in-associated-constant = "deny"
elided-lifetimes-in-paths = "deny"
elided-named-lifetimes = "deny"
ellipsis-inclusive-range-patterns = "deny"
enum-intrinsics-non-enums = "deny"
explicit-builtin-cfgs-in-flags = "deny"
explicit-outlives-requirements = "deny"
exported-private-dependencies = "deny"
ffi-unwind-calls = "deny"
for-loops-over-fallibles = "deny"
forbidden-lint-groups = "deny"
forgetting-copy-types = "deny"
forgetting-references = "deny"
function-item-references = "deny"
fuzzy-provenance-casts = "deny"
hidden-glob-reexports = "deny"
if-let-rescope = "deny"
ill-formed-attribute-input = "deny"
impl-trait-overcaptures = "deny"
impl-trait-redundant-captures = "deny"
improper-ctypes = "deny"
improper-ctypes-definitions = "deny"
incomplete-features = "deny"
incomplete-include = "deny"
ineffective-unstable-trait-impl = "deny"
inline-no-sanitize = "deny"
internal-features = "deny"
invalid-atomic-ordering = "deny"
invalid-doc-attributes = "deny"
invalid-from-utf8 = "deny"
invalid-from-utf8-unchecked = "deny"
invalid-macro-export-arguments = "deny"
invalid-nan-comparisons = "deny"
invalid-reference-casting = "deny"
invalid-type-param-default = "deny"
invalid-value = "deny"
irrefutable-let-patterns = "deny"
keyword-idents-2018 = "deny"
keyword-idents-2024 = "deny"
large-assignments = "deny"
late-bound-lifetime-arguments = "deny"
legacy-derive-helpers = "deny"
let-underscore-drop = "deny"
let-underscore-lock = "deny"
long-running-const-eval = "deny"
lossy-provenance-casts = "deny"
macro-expanded-macro-exports-accessed-by-absolute-paths = "deny"
macro-use-extern-crate = "deny"
map-unit-fn = "deny"
meta-variable-misuse = "deny"
missing-abi = "deny"
missing-copy-implementations = "deny"
missing-debug-implementations = "deny"
missing-docs = "deny"
missing-fragment-specifier = "deny"
missing-unsafe-on-extern = "deny"
mixed-script-confusables = "deny"
multiple-supertrait-upcastable = "deny"
must-not-suspend = "deny"
mutable-transmutes = "deny"
named-arguments-used-positionally = "deny"
named-asm-labels = "deny"
never-type-fallback-flowing-into-unsafe = "deny"
no-mangle-const-items = "deny"
no-mangle-generic-items = "deny"
non-ascii-idents = "deny"
non-camel-case-types = "deny"
non-contiguous-range-endpoints = "deny"
non-exhaustive-omitted-patterns = "deny"
non-fmt-panics = "deny"
non-local-definitions = "deny"
non-shorthand-field-patterns = "deny"
non-snake-case = "deny"
non-upper-case-globals = "deny"
noop-method-call = "deny"
opaque-hidden-inferred-bound = "deny"
order-dependent-trait-objects = "deny"
out-of-scope-macro-calls = "deny"
overflowing-literals = "deny"
overlapping-range-endpoints = "deny"
path-statements = "deny"
patterns-in-fns-without-body = "deny"
private-bounds = "deny"
private-interfaces = "deny"
proc-macro-derive-resolution-fallback = "deny"
ptr-cast-add-auto-to-object = "deny"
ptr-to-integer-transmute-in-consts = "deny"
pub-use-of-private-extern-crate = "deny"
redundant-imports = "deny"
redundant-lifetimes = "deny"
redundant-semicolons = "deny"
refining-impl-trait-internal = "deny"
refining-impl-trait-reachable = "deny"
renamed-and-removed-lints = "deny"
repr-transparent-external-private-fields = "deny"
rust-2021-incompatible-closure-captures = "deny"
rust-2021-incompatible-or-patterns = "deny"
rust-2021-prefixes-incompatible-syntax = "deny"
rust-2021-prelude-collisions = "deny"
rust-2024-guarded-string-incompatible-syntax = "deny"
rust-2024-incompatible-pat = "deny"
rust-2024-prelude-collisions = "deny"
self-constructor-from-outer-item = "deny"
semicolon-in-expressions-from-macros = "deny"
single-use-lifetimes = "deny"
soft-unstable = "deny"
special-module-name = "deny"
stable-features = "deny"
static-mut-refs = "deny"
suspicious-double-ref-op = "deny"
tail-expr-drop-order = "warn"
test-unstable-lint = "deny"
text-direction-codepoint-in-comment = "deny"
text-direction-codepoint-in-literal = "deny"
trivial-bounds = "deny"
trivial-casts = "deny"
trivial-numeric-casts = "deny"
type-alias-bounds = "deny"
tyvar-behind-raw-pointer = "deny"
uncommon-codepoints = "deny"
unconditional-panic = "deny"
unconditional-recursion = "deny"
uncovered-param-in-projection = "deny"
undefined-naked-function-abi = "deny"
undropped-manually-drops = "deny"
unexpected-cfgs = "deny"
unfulfilled-lint-expectations = "deny"
ungated-async-fn-track-caller = "deny"
uninhabited-static = "deny"
unit-bindings = "deny"
unknown-crate-types = "deny"
unknown-lints = "allow"
unknown-or-malformed-diagnostic-attributes = "deny"
unnameable-test-items = "deny"
unnameable-types = "deny"
unpredictable-function-pointer-comparisons = "deny"
unreachable-code = "deny"
unreachable-patterns = "deny"
unreachable-pub = "deny"
unsafe-attr-outside-unsafe = "deny"
unsafe-code = "allow"
unsafe-op-in-unsafe-fn = "deny"
unstable-features = "allow"
unstable-name-collisions = "deny"
unstable-syntax-pre-expansion = "deny"
unsupported-fn-ptr-calling-conventions = "deny"
unused-allocation = "deny"
unused-assignments = "deny"
unused-associated-type-bounds = "deny"
unused-attributes = "deny"
unused-braces = "deny"
unused-comparisons = "deny"
unused-crate-dependencies = "deny"
unused-doc-comments = "deny"
unused-extern-crates = "deny"
unused-features = "deny"
unused-import-braces = "deny"
unused-imports = "deny"
unused-labels = "deny"
unused-lifetimes = "deny"
unused-macro-rules = "deny"
unused-macros = "deny"
unused-must-use = "deny"
unused-mut = "deny"
unused-parens = "deny"
unused-qualifications = "deny"
unused-results = "deny"
unused-unsafe = "deny"
unused-variables = "deny"
useless-deprecated = "deny"
useless-ptr-null-checks = "deny"
variant-size-differences = "deny"
warnings = "warn"
wasm-c-abi = "deny"
while-true = "deny"

[lints.clippy]
absolute-paths = "deny"
absurd-extreme-comparisons = "deny"
alloc-instead-of-core = "deny"
allow-attributes = "deny"
allow-attributes-without-reason = "deny"
almost-complete-range = "deny"
almost-swapped = "deny"
approx-constant = "deny"
arbitrary-source-item-ordering = "deny"
arc-with-non-send-sync = "deny"
arithmetic-side-effects = "deny"
as-conversions = "deny"
as-pointer-underscore = "deny"
as-ptr-cast-mut = "deny"
as-underscore = "deny"
assertions-on-constants = "deny"
assertions-on-result-states = "deny"
assign-op-pattern = "deny"
assigning-clones = "deny"
async-yields-async = "deny"
await-holding-invalid-type = "deny"
await-holding-lock = "deny"
await-holding-refcell-ref = "deny"
bad-bit-mask = "deny"
bad-opt-access = "deny"
big-endian-bytes = "deny"
bind-instead-of-map = "deny"
blanket-clippy-restriction-lints = "deny"
blocks-in-conditions = "deny"
bool-assert-comparison = "deny"
bool-comparison = "deny"
bool-to-int-with-if = "deny"
borrow-as-ptr = "deny"
borrow-deref-ref = "deny"
borrow-interior-mutable-const = "deny"
borrowed-box = "deny"
box-collection = "deny"
box-default = "deny"
boxed-local = "deny"
branches-sharing-code = "deny"
builtin-type-shadow = "deny"
byte-char-slices = "deny"
bytes-count-to-len = "deny"
bytes-nth = "deny"
cargo-common-metadata = "deny"
case-sensitive-file-extension-comparisons = "deny"
cast-abs-to-unsigned = "deny"
cast-enum-constructor = "deny"
cast-enum-truncation = "deny"
cast-lossless = "deny"
cast-nan-to-int = "deny"
cast-possible-truncation = "deny"
cast-possible-wrap = "deny"
cast-precision-loss = "deny"
cast-ptr-alignment = "deny"
cast-sign-loss = "deny"
cast-slice-different-sizes = "deny"
cast-slice-from-raw-parts = "deny"
cfg-not-test = "deny"
char-lit-as-u8 = "deny"
chars-last-cmp = "deny"
chars-next-cmp = "deny"
checked-conversions = "deny"
clear-with-drain = "deny"
clone-on-copy = "deny"
clone-on-ref-ptr = "deny"
cloned-instead-of-copied = "deny"
cmp-null = "deny"
cmp-owned = "deny"
cognitive-complexity = "deny"
collapsible-else-if = "deny"
collapsible-if = "deny"
collapsible-match = "deny"
collapsible-str-replace = "deny"
collection-is-never-read = "deny"
comparison-chain = "deny"
comparison-to-empty = "deny"
const-is-empty = "deny"
copy-iterator = "deny"
crate-in-macro-def = "deny"
create-dir = "deny"
crosspointer-transmute = "deny"
dbg-macro = "deny"
debug-assert-with-mut-call = "deny"
decimal-literal-representation = "deny"
declare-interior-mutable-const = "deny"
default-constructed-unit-structs = "deny"
default-hash-types = "deny"
default-instead-of-iter-empty = "deny"
default-numeric-fallback = "deny"
default-trait-access = "allow"
default-union-representation = "deny"
deprecated-cfg-attr = "deny"
deprecated-clippy-cfg-attr = "deny"
deprecated-semver = "deny"
deref-addrof = "deny"
deref-by-slicing = "deny"
derivable-impls = "deny"
derive-ord-xor-partial-ord = "deny"
derive-partial-eq-without-eq = "deny"
derived-hash-with-manual-eq = "deny"
diagnostic-outside-of-impl = "deny"
disallowed-macros = "deny"
disallowed-methods = "deny"
disallowed-names = "deny"
disallowed-script-idents = "deny"
disallowed-types = "deny"
diverging-sub-expression = "deny"
doc-include-without-cfg = "deny"
doc-lazy-continuation = "deny"
doc-link-with-quotes = "deny"
doc-markdown = "deny"
doc-nested-refdefs = "deny"
double-comparisons = "deny"
double-ended-iterator-last = "deny"
double-must-use = "deny"
double-neg = "deny"
double-parens = "deny"
drain-collect = "deny"
drop-non-drop = "deny"
duplicate-mod = "deny"
duplicate-underscore-argument = "deny"
duplicated-attributes = "deny"
duration-subsec = "deny"
eager-transmute = "deny"
else-if-without-else = "deny"
empty-docs = "deny"
empty-drop = "deny"
empty-enum = "allow"
empty-enum-variants-with-brackets = "deny"
empty-line-after-doc-comments = "deny"
empty-line-after-outer-attr = "deny"
empty-loop = "deny"
empty-structs-with-brackets = "deny"
enum-clike-unportable-variant = "deny"
enum-glob-use = "deny"
enum-variant-names = "deny"
eq-op = "deny"
equatable-if-let = "deny"
erasing-op = "deny"
err-expect = "deny"
error-impl-error = "deny"
excessive-nesting = "deny"
excessive-precision = "deny"
exhaustive-enums = "deny"
exhaustive-structs = "deny"
exit = "deny"
expect-fun-call = "deny"
expect-used = "deny"
expl-impl-clone-on-copy = "deny"
explicit-auto-deref = "deny"
explicit-counter-loop = "deny"
explicit-deref-methods = "deny"
explicit-into-iter-loop = "deny"
explicit-iter-loop = "deny"
explicit-write = "deny"
extend-with-drain = "deny"
extra-unused-lifetimes = "deny"
extra-unused-type-parameters = "deny"
fallible-impl-from = "deny"
field-reassign-with-default = "deny"
field-scoped-visibility-modifiers = "allow"
filetype-is-file = "deny"
filter-map-bool-then = "deny"
filter-map-identity = "deny"
filter-map-next = "deny"
filter-next = "deny"
flat-map-identity = "deny"
flat-map-option = "deny"
float-arithmetic = "allow"
float-cmp = "deny"
float-cmp-const = "deny"
float-equality-without-abs = "deny"
fn-params-excessive-bools = "deny"
fn-to-numeric-cast = "deny"
fn-to-numeric-cast-any = "deny"
fn-to-numeric-cast-with-truncation = "deny"
for-kv-map = "deny"
forget-non-drop = "deny"
format-collect = "deny"
format-in-format-args = "deny"
format-push-string = "deny"
four-forward-slashes = "deny"
from-iter-instead-of-collect = "deny"
from-over-into = "deny"
from-raw-with-void-ptr = "deny"
from-str-radix-10 = "deny"
future-not-send = "deny"
get-first = "deny"
get-last-with-len = "deny"
get-unwrap = "deny"
host-endian-bytes = "deny"
identity-op = "deny"
if-let-mutex = "deny"
if-not-else = "deny"
if-same-then-else = "deny"
if-then-some-else-none = "deny"
ifs-same-cond = "deny"
ignored-unit-patterns = "deny"
impl-hash-borrow-with-str-and-bytes = "deny"
impl-trait-in-params = "deny"
implicit-clone = "deny"
implicit-hasher = "deny"
implicit-return = "allow"
implicit-saturating-add = "deny"
implicit-saturating-sub = "deny"
implied-bounds-in-impls = "deny"
impossible-comparisons = "deny"
imprecise-flops = "deny"
incompatible-msrv = "deny"
inconsistent-digit-grouping = "deny"
inconsistent-struct-constructor = "deny"
index-refutable-slice = "deny"
indexing-slicing = "deny"
ineffective-bit-mask = "deny"
ineffective-open-options = "deny"
inefficient-to-string = "deny"
infallible-destructuring-match = "deny"
infinite-iter = "deny"
infinite-loop = "deny"
inherent-to-string = "deny"
inherent-to-string-shadow-display = "deny"
init-numbered-fields = "deny"
inline-always = "allow"
inline-asm-x86-att-syntax = "deny"
inline-asm-x86-intel-syntax = "deny"
inline-fn-without-body = "deny"
inspect-for-each = "deny"
int-plus-one = "deny"
integer-division = "deny"
integer-division-remainder-used = "deny"
into-iter-on-ref = "deny"
into-iter-without-iter = "deny"
invalid-null-ptr-usage = "deny"
invalid-regex = "deny"
invalid-upcast-comparisons = "deny"
inverted-saturating-sub = "deny"
invisible-characters = "deny"
is-digit-ascii-radix = "deny"
items-after-statements = "deny"
items-after-test-module = "deny"
iter-cloned-collect = "deny"
iter-count = "deny"
iter-filter-is-ok = "deny"
iter-filter-is-some = "deny"
iter-kv-map = "deny"
iter-next-loop = "deny"
iter-next-slice = "deny"
iter-not-returning-iterator = "deny"
iter-nth = "deny"
iter-nth-zero = "deny"
iter-on-empty-collections = "deny"
iter-on-single-items = "deny"
iter-out-of-bounds = "deny"
iter-over-hash-type = "deny"
iter-overeager-cloned = "deny"
iter-skip-next = "deny"
iter-skip-zero = "deny"
iter-with-drain = "deny"
iter-without-into-iter = "deny"
iterator-step-by-zero = "deny"
join-absolute-paths = "deny"
just-underscores-and-digits = "deny"
large-const-arrays = "deny"
large-digit-groups = "deny"
large-enum-variant = "deny"
large-futures = "deny"
large-include-file = "deny"
large-stack-arrays = "deny"
large-stack-frames = "deny"
large-types-passed-by-value = "deny"
legacy-numeric-constants = "deny"
len-without-is-empty = "deny"
len-zero = "deny"
let-and-return = "deny"
let-underscore-future = "deny"
let-underscore-lock = "deny"
let-underscore-must-use = "deny"
let-underscore-untyped = "deny"
let-unit-value = "deny"
let-with-type-underscore = "deny"
lines-filter-map-ok = "deny"
linkedlist = "deny"
lint-groups-priority = "deny"
lint-pass-impl-without-macro = "deny"
literal-string-with-formatting-args = "deny"
little-endian-bytes = "deny"
lossy-float-literal = "deny"
macro-metavars-in-unsafe = "deny"
macro-use-imports = "deny"
main-recursion = "deny"
manual-assert = "deny"
manual-async-fn = "deny"
manual-bits = "deny"
manual-c-str-literals = "deny"
manual-clamp = "deny"
manual-div-ceil = "deny"
manual-filter = "deny"
manual-filter-map = "deny"
manual-find = "deny"
manual-find-map = "deny"
manual-flatten = "deny"
manual-hash-one = "deny"
manual-ignore-case-cmp = "deny"
manual-inspect = "deny"
manual-instant-elapsed = "deny"
manual-is-ascii-check = "deny"
manual-is-finite = "deny"
manual-is-infinite = "deny"
manual-is-power-of-two = "deny"
manual-is-variant-and = "deny"
manual-let-else = "deny"
manual-main-separator-str = "deny"
manual-map = "deny"
manual-memcpy = "deny"
manual-next-back = "deny"
manual-non-exhaustive = "deny"
manual-ok-or = "deny"
manual-pattern-char-comparison = "deny"
manual-range-contains = "deny"
manual-range-patterns = "deny"
manual-rem-euclid = "deny"
manual-retain = "deny"
manual-rotate = "deny"
manual-saturating-arithmetic = "deny"
manual-slice-size-calculation = "deny"
manual-split-once = "deny"
manual-str-repeat = "deny"
manual-string-new = "deny"
manual-strip = "deny"
manual-swap = "deny"
manual-try-fold = "deny"
manual-unwrap-or = "deny"
manual-unwrap-or-default = "deny"
manual-while-let-some = "deny"
many-single-char-names = "deny"
map-all-any-identity = "deny"
map-clone = "deny"
map-collect-result-unit = "deny"
map-entry = "deny"
map-err-ignore = "allow"
map-flatten = "deny"
map-identity = "deny"
map-unwrap-or = "deny"
map-with-unused-argument-over-ranges = "deny"
match-as-ref = "deny"
match-bool = "deny"
match-like-matches-macro = "deny"
match-on-vec-items = "deny"
match-overlapping-arm = "deny"
match-ref-pats = "deny"
match-result-ok = "deny"
match-same-arms = "deny"
match-single-binding = "deny"
match-str-case-mismatch = "deny"
match-wild-err-arm = "deny"
match-wildcard-for-single-variants = "deny"
maybe-infinite-iter = "deny"
mem-forget = "deny"
mem-replace-option-with-none = "deny"
mem-replace-with-default = "deny"
mem-replace-with-uninit = "deny"
min-ident-chars = "allow"
min-max = "deny"
mismatching-type-param-order = "deny"
misnamed-getters = "deny"
misrefactored-assign-op = "deny"
missing-assert-message = "deny"
missing-asserts-for-indexing = "deny"
missing-const-for-fn = "deny"
missing-const-for-thread-local = "deny"
missing-docs-in-private-items = "deny"
missing-enforced-import-renames = "deny"
missing-errors-doc = "deny"
missing-fields-in-debug = "deny"
missing-inline-in-public-items = "deny"
missing-panics-doc = "deny"
missing-safety-doc = "deny"
missing-spin-loop = "deny"
missing-trait-methods = "deny"
missing-transmute-annotations = "deny"
mistyped-literal-suffixes = "deny"
mixed-attributes-style = "deny"
mixed-case-hex-literals = "deny"
mixed-read-write-in-expression = "deny"
mod-module-files = "deny"
module-inception = "deny"
module-name-repetitions = "deny"
modulo-arithmetic = "deny"
modulo-one = "deny"
multi-assignments = "deny"
multiple-bound-locations = "deny"
multiple-crate-versions = "allow"
multiple-inherent-impl = "deny"
multiple-unsafe-ops-per-block = "deny"
must-use-candidate = "deny"
must-use-unit = "deny"
mut-from-ref = "deny"
mut-mut = "deny"
mut-mutex-lock = "deny"
mut-range-bound = "deny"
mutable-key-type = "deny"
mutex-atomic = "deny"
mutex-integer = "deny"
naive-bytecount = "deny"
needless-arbitrary-self-type = "deny"
needless-as-bytes = "deny"
needless-bitwise-bool = "deny"
needless-bool = "deny"
needless-bool-assign = "deny"
needless-borrow = "deny"
needless-borrowed-reference = "allow"
needless-borrows-for-generic-args = "deny"
needless-character-iteration = "deny"
needless-collect = "deny"
needless-continue = "deny"
needless-doctest-main = "deny"
needless-else = "deny"
needless-for-each = "deny"
needless-if = "deny"
needless-late-init = "deny"
needless-lifetimes = "deny"
needless-match = "deny"
needless-maybe-sized = "deny"
needless-option-as-deref = "deny"
needless-option-take = "deny"
needless-parens-on-range-literals = "deny"
needless-pass-by-ref-mut = "deny"
needless-pass-by-value = "deny"
needless-pub-self = "deny"
needless-question-mark = "deny"
needless-range-loop = "deny"
needless-raw-string-hashes = "deny"
needless-raw-strings = "deny"
needless-return = "deny"
needless-return-with-question-mark = "deny"
needless-splitn = "deny"
needless-update = "deny"
neg-cmp-op-on-partial-ord = "deny"
neg-multiply = "deny"
negative-feature-names = "deny"
never-loop = "deny"
new-ret-no-self = "deny"
new-without-default = "deny"
no-effect = "deny"
no-effect-replace = "deny"
no-effect-underscore-binding = "deny"
no-mangle-with-rust-abi = "deny"
non-ascii-literal = "deny"
non-canonical-clone-impl = "deny"
non-canonical-partial-ord-impl = "deny"
non-glob-import-of-type-ir-inherent = "deny"
non-minimal-cfg = "deny"
non-octal-unix-permissions = "deny"
non-send-fields-in-send-ty = "deny"
non-zero-suggestions = "deny"
nonminimal-bool = "deny"
nonsensical-open-options = "deny"
nonstandard-macro-braces = "deny"
not-unsafe-ptr-arg-deref = "deny"
obfuscated-if-else = "deny"
octal-escapes = "deny"
ok-expect = "deny"
only-used-in-recursion = "deny"
op-ref = "deny"
option-as-ref-cloned = "deny"
option-as-ref-deref = "deny"
option-env-unwrap = "deny"
option-filter-map = "deny"
option-if-let-else = "deny"
option-map-or-err-ok = "deny"
option-map-or-none = "deny"
option-map-unit-fn = "deny"
option-option = "deny"
or-fun-call = "deny"
or-then-unwrap = "deny"
out-of-bounds-indexing = "deny"
overly-complex-bool-expr = "deny"
panic = "deny"
panic-in-result-fn = "deny"
panicking-overflow-checks = "deny"
panicking-unwrap = "deny"
partial-pub-fields = "deny"
partialeq-ne-impl = "deny"
partialeq-to-none = "deny"
pass-by-value = "deny"
path-buf-push-overwrite = "deny"
path-ends-with-ext = "deny"
pathbuf-init-then-push = "deny"
pattern-type-mismatch = "deny"
permissions-set-readonly-false = "deny"
pointers-in-nomem-asm-block = "deny"
possible-missing-comma = "deny"
potential-query-instability = "deny"
precedence = "deny"
print-in-format-impl = "deny"
print-literal = "deny"
print-stderr = "deny"
print-stdout = "deny"
print-with-newline = "deny"
println-empty-string = "deny"
ptr-arg = "deny"
ptr-as-ptr = "deny"
ptr-cast-constness = "deny"
ptr-eq = "deny"
ptr-offset-with-cast = "deny"
pub-underscore-fields = "deny"
pub-with-shorthand = "allow"
pub-without-shorthand = "deny"
question-mark = "deny"
question-mark-used = "allow"
range-minus-one = "deny"
range-plus-one = "deny"
range-zip-with-len = "deny"
rc-buffer = "deny"
rc-clone-in-vec-init = "deny"
rc-mutex = "deny"
read-line-without-trim = "deny"
read-zero-byte-vec = "deny"
readonly-write-lock = "deny"
recursive-format-impl = "deny"
redundant-allocation = "deny"
redundant-as-str = "deny"
redundant-async-block = "deny"
redundant-at-rest-pattern = "deny"
redundant-clone = "deny"
redundant-closure = "deny"
redundant-closure-call = "deny"
redundant-closure-for-method-calls = "deny"
redundant-comparisons = "deny"
redundant-else = "deny"
redundant-feature-names = "deny"
redundant-field-names = "deny"
redundant-guards = "deny"
redundant-locals = "deny"
redundant-pattern = "deny"
redundant-pattern-matching = "deny"
redundant-pub-crate = "allow"
redundant-slicing = "deny"
redundant-static-lifetimes = "deny"
redundant-type-annotations = "deny"
ref-as-ptr = "deny"
ref-binding-to-reference = "deny"
ref-option = "deny"
ref-option-ref = "deny"
ref-patterns = "allow"
regex-creation-in-loops = "deny"
renamed-function-params = "deny"
repeat-once = "deny"
repeat-vec-with-capacity = "deny"
repr-packed-without-abi = "deny"
reserve-after-initialization = "deny"
rest-pat-in-fully-bound-structs = "deny"
result-filter-map = "deny"
result-large-err = "deny"
result-map-or-into-option = "deny"
result-map-unit-fn = "deny"
result-unit-err = "deny"
return-self-not-must-use = "deny"
reversed-empty-ranges = "deny"
same-functions-in-if-condition = "deny"
same-item-push = "deny"
same-name-method = "deny"
search-is-some = "deny"
seek-from-current = "deny"
seek-to-start-instead-of-rewind = "deny"
self-assignment = "deny"
self-named-constructors = "deny"
self-named-module-files = "deny"
semicolon-if-nothing-returned = "deny"
semicolon-inside-block = "deny"
semicolon-outside-block = "allow"
separated-literal-suffix = "allow"
serde-api-misuse = "deny"
set-contains-or-insert = "deny"
shadow-reuse = "deny"
shadow-same = "deny"
shadow-unrelated = "deny"
short-circuit-statement = "deny"
should-implement-trait = "deny"
should-panic-without-expect = "deny"
significant-drop-in-scrutinee = "deny"
significant-drop-tightening = "deny"
similar-names = "deny"
single-call-fn = "deny"
single-char-add-str = "deny"
single-char-lifetime-names = "allow"
single-char-pattern = "deny"
single-component-path-imports = "deny"
single-element-loop = "deny"
single-match = "deny"
single-match-else = "deny"
single-range-in-vec-init = "deny"
size-of-in-element-count = "deny"
size-of-ref = "deny"
skip-while-next = "deny"
slow-vector-initialization = "deny"
span-use-eq-ctxt = "deny"
stable-sort-primitive = "deny"
std-instead-of-alloc = "deny"
std-instead-of-core = "deny"
str-split-at-newline = "deny"
str-to-string = "deny"
string-add = "deny"
string-add-assign = "deny"
string-extend-chars = "deny"
string-from-utf8-as-bytes = "deny"
string-lit-as-bytes = "deny"
string-lit-chars-any = "deny"
string-slice = "deny"
string-to-string = "deny"
strlen-on-c-strings = "deny"
struct-excessive-bools = "deny"
struct-field-names = "deny"
suboptimal-flops = "deny"
suspicious-arithmetic-impl = "deny"
suspicious-assignment-formatting = "deny"
suspicious-command-arg-space = "deny"
suspicious-doc-comments = "deny"
suspicious-else-formatting = "deny"
suspicious-map = "deny"
suspicious-op-assign-impl = "deny"
suspicious-open-options = "deny"
suspicious-operation-groupings = "deny"
suspicious-splitn = "deny"
suspicious-to-owned = "deny"
suspicious-unary-op-formatting = "deny"
suspicious-xor-used-as-pow = "deny"
swap-ptr-to-ref = "deny"
symbol-intern-string-literal = "deny"
tabs-in-doc-comments = "deny"
temporary-assignment = "deny"
test-attr-in-doctest = "deny"
tests-outside-test-module = "deny"
to-digit-is-some = "deny"
to-string-in-format-args = "deny"
to-string-trait-impl = "deny"
todo = "deny"
too-long-first-doc-paragraph = "deny"
too-many-arguments = "deny"
too-many-lines = "deny"
toplevel-ref-arg = "deny"
trailing-empty-array = "deny"
trait-duplication-in-bounds = "deny"
transmute-bytes-to-str = "deny"
transmute-float-to-int = "deny"
transmute-int-to-bool = "deny"
transmute-int-to-char = "deny"
transmute-int-to-float = "deny"
transmute-int-to-non-zero = "deny"
transmute-null-to-fn = "deny"
transmute-num-to-bytes = "deny"
transmute-ptr-to-ptr = "deny"
transmute-ptr-to-ref = "deny"
transmute-undefined-repr = "deny"
transmutes-expressible-as-ptr-casts = "deny"
transmuting-null = "deny"
trim-split-whitespace = "deny"
trivial-regex = "deny"
trivially-copy-pass-by-ref = "deny"
try-err = "deny"
tuple-array-conversions = "deny"
type-complexity = "deny"
type-id-on-box = "deny"
type-repetition-in-bounds = "deny"
unchecked-duration-subtraction = "deny"
unconditional-recursion = "deny"
undocumented-unsafe-blocks = "deny"
unicode-not-nfc = "deny"
unimplemented = "deny"
uninhabited-references = "deny"
uninit-assumed-init = "deny"
uninit-vec = "deny"
uninlined-format-args = "deny"
unit-arg = "deny"
unit-cmp = "deny"
unit-hash = "deny"
unit-return-expecting-ord = "deny"
unnecessary-box-returns = "deny"
unnecessary-cast = "deny"
unnecessary-clippy-cfg = "deny"
unnecessary-fallible-conversions = "deny"
unnecessary-filter-map = "deny"
unnecessary-find-map = "deny"
unnecessary-first-then-check = "deny"
unnecessary-fold = "deny"
unnecessary-get-then-check = "deny"
unnecessary-join = "deny"
unnecessary-lazy-evaluations = "deny"
unnecessary-literal-bound = "deny"
unnecessary-literal-unwrap = "deny"
unnecessary-map-on-constructor = "deny"
unnecessary-map-or = "deny"
unnecessary-min-or-max = "deny"
unnecessary-mut-passed = "deny"
unnecessary-operation = "deny"
unnecessary-owned-empty-strings = "deny"
unnecessary-result-map-or-else = "deny"
unnecessary-safety-comment = "deny"
unnecessary-safety-doc = "deny"
unnecessary-self-imports = "deny"
unnecessary-sort-by = "deny"
unnecessary-struct-initialization = "deny"
unnecessary-to-owned = "deny"
unnecessary-unwrap = "deny"
unnecessary-wraps = "deny"
unneeded-field-pattern = "allow"
unneeded-wildcard-pattern = "deny"
unnested-or-patterns = "deny"
unreachable = "deny"
unreadable-literal = "deny"
unsafe-derive-deserialize = "deny"
unsafe-removed-from-name = "deny"
unseparated-literal-suffix = "deny"
unsound-collection-transmute = "deny"
untracked-query-information = "deny"
untranslatable-diagnostic = "deny"
unused-async = "deny"
unused-enumerate-index = "deny"
unused-format-specs = "deny"
unused-io-amount = "deny"
unused-peekable = "deny"
unused-result-ok = "deny"
unused-rounding = "deny"
unused-self = "deny"
unused-trait-names = "deny"
unused-unit = "deny"
unusual-byte-groupings = "deny"
unwrap-in-result = "deny"
unwrap-or-default = "deny"
unwrap-used = "deny"
upper-case-acronyms = "deny"
usage-of-qualified-ty = "deny"
usage-of-ty-tykind = "deny"
usage-of-type-ir-inherent = "deny"
use-debug = "deny"
use-self = "deny"
used-underscore-binding = "deny"
used-underscore-items = "deny"
useless-asref = "deny"
useless-attribute = "deny"
useless-conversion = "deny"
useless-format = "deny"
useless-let-if-seq = "deny"
useless-transmute = "deny"
useless-vec = "deny"
vec-box = "deny"
vec-init-then-push = "deny"
vec-resize-to-zero = "deny"
verbose-bit-mask = "deny"
verbose-file-reads = "deny"
waker-clone-wake = "deny"
while-float = "deny"
while-immutable-condition = "deny"
while-let-loop = "deny"
while-let-on-iterator = "deny"
wildcard-dependencies = "allow"
wildcard-enum-match-arm = "deny"
wildcard-imports = "deny"
wildcard-in-or-patterns = "deny"
write-literal = "deny"
write-with-newline = "deny"
writeln-empty-string = "deny"
wrong-self-convention = "deny"
wrong-transmute = "deny"
zero-divided-by-zero = "deny"
zero-prefixed-literal = "deny"
zero-ptr = "deny"
zero-repeat-side-effects = "deny"
zero-sized-map-values = "deny"
zombie-processes = "deny"
zst-offset = "deny"


